@@ -13,7 +13,10 @@
 # Is this a Testnet wallet (will generate testnet addresses)
 #testnet=true
 
-# Deterministic wallet type. 
+# Work in Litecoin (LTC) mode
+#litecoin=true
+
+# Deterministic wallet type.
 # Use 4 for HD Wallet (BIP32).
 # Default is 3 (Gocoin proprietary wallet)
 #type=4
@@ -23,7 +26,7 @@
 # Example paths for known wallet implementations:
 #  m/0/0 - Electrum
 #  m/0'/0'/0' - Bitcoin Core
-#  m/0'/0/0 - Multibit HD, BRD Wallet
+#  m/0'/0/0 - Multibit HD, BRD Wallet, Litewallet
 #  m/44'/0'/0'/0 - Coinomi, Ledger
 #  m/44'/0'/0'/0/0 - Mycelium, Samourai Legacy (P2PKH)
 #  m/49'/0'/0'/0/0 - Mycelium, Samourai SegWit compatible (P2SH)
