@@ -16,6 +16,7 @@
 * Client/WebUI/Home: Shows the percentage occupancy of the ord inscriptions for each block
 * Tools/bdb - new command "-ord" to see ord inscriptions occupancy per block (use with "-ox" to extract the files)
 * Client: fixed lock problems releted to geting mempool content (only for peers we're authenticated with)
+* Lib: Chenges in "others/bip39" (invalid mnemonic error is more descriptiove, removed some warnings)
 
 1.10.2 - 2022-09-06:
 * Client: New config value "Memory.CompressBlockDB" (default true)
